<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".userinterface.posts.AddPostFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newPost_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/image_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/actionBarBottom_relativeLayout"/>

    <RelativeLayout
        android:id="@+id/actionBarBottom_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPalette2"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPost_recyclerView"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/gallery_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery_text"
            style="@style/TextViewTheme"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="30dp"/>

        <TextView
            android:id="@+id/image_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_text"
            style="@style/TextViewTheme"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/video_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_text"
            style="@style/TextViewTheme"
            android:layout_marginHorizontal="30dp"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>